[project]
name = "dotfiles"
version = "0.1.0"
requires-python = "~=3.14.0"

[dependency-groups]
dev = ["ruff==0.14.10", "ty==0.0.10"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731"]

[tool.ty.environment]
root = ["./unix/.config", "./unix/.config/lldbdash"]
